Improve accessibility: add SEO meta description, fix color contrast, fix heading hierarchy

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/webp" href="/image.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Build optimal Honkai Star Rail teams with our comprehensive team builder. Discover character synergies, get BiS and F2P team recommendations, and find the perfect teammates for your favorite characters.">
     <title>Honkai Star Rail Team Builder</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
