--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/webp" href="/image.webp">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Build optimal Honkai Star Rail teams with our comprehensive team builder. Discover character synergies, get BiS and F2P team recommendations, and find the perfect teammates for your favorite characters.">
     <title>Honkai Star Rail Team Builder</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+      *{margin:0;padding:0;box-sizing:border-box}
+      html{background:#0f0f23;height:100%;overflow-x:hidden}
+      body{background:linear-gradient(135deg,#0f0f23,#1a1a2e,#16213e);background-attachment:fixed;color:white;font-family:system-ui,sans-serif;min-height:100vh;overflow-x:hidden}
+      #app{min-height:100vh}
+      .bg-dark{background-color:rgba(15,15,35,0.9)!important}
+      .border-primary{border-color:#00d4ff!important}
+      .text-primary{color:#00d4ff!important}
+      @font-face{font-family:'Font Awesome 6 Free';font-display:swap}
+      @font-face{font-family:'Font Awesome 6 Brands';font-display:swap}
+    </style>
+    <script>
+      window.addEventListener('load', function() {
+        var link = document.createElement('link');
+        link.rel = 'stylesheet';
+        link.href = 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css';
+        document.head.appendChild(link);
+      });
+    </script>
   </head>
   <body>
     <div id="app"></div>
