fix: improve service worker error handling and console logging
- Add comprehensive try-catch blocks to all cache functions
- Improve error logging with console.warn instead of silent failures
- Add proper content-type headers to error responses
- Enhance service worker registration with update handling
- Add detailed logging for install and activate events
- Fix potential cache.put() failures that could cause console errors

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
     <meta http-equiv="Expires" content="31536000" />
 
-    <!-- Preload critical resources -->
-    <link rel="preload" href="/images/element/" as="fetch" crossorigin="anonymous" />
-    <link rel="preload" href="/images/path/" as="fetch" crossorigin="anonymous" />
+    <!-- Remove invalid preload directives - directories can't be preloaded -->
+    <!-- Images will be lazy loaded and cached by service worker -->
 
     <title>Honkai Star Rail Team Builder</title>
     <style>
